--- a/wp-content/themes/srijanalaya/less/admin.less
+++ b/wp-content/themes/srijanalaya/less/admin.less
@@ -73,7 +73,8 @@ p, .footer-bar {
     }
 }
 
-.wp-admin #footer-ozh-oam {
-	display: none;
+.wp-admin #footer-ozh-oam, .wp-admin #wpcf-marketing, #dashboard_right_now,  #dashboard_activity, #dashboard_quick_press, .wp-admin #footer-upgrade, #welcome-panel, #screen-meta-links, #screen-meta {
+	display: none !important;
 }
+
 
