News Page Template

--- a/wp-content/themes/srijanalaya/less/admin.less
+++ b/wp-content/themes/srijanalaya/less/admin.less
@@ -63,18 +63,16 @@ h2 {
     }
 }
 
-p, .footer-bar {
+p {
 
-    font-size: 20px;
+    font-size: 12px;
     font-family:'Helvetica';
     @media (min-width :700px) and (max-width: 1199px) ,(max-width:700px){
 
-        font-size:15px;
+        font-size:10px;
     }
 }
 
 .wp-admin #footer-ozh-oam, .wp-admin #wpcf-marketing, #dashboard_right_now,  #dashboard_activity, #dashboard_quick_press, .wp-admin #footer-upgrade, #welcome-panel, #screen-meta-links, #screen-meta {
 	display: none !important;
 }
-
-
