--- a/wp-content/themes/srijanalaya/less/timeline.less
+++ b/wp-content/themes/srijanalaya/less/timeline.less
@@ -340,6 +340,10 @@ header h1 {
     border-right: 20px solid #FFF;
     display: block;
     content: " ";
+    @media(min-width: 1600px) {
+      left: 90.25%;
+      top: -9px;
+    }
   }
   .project-wrapper-left::after {
     position: absolute;
@@ -350,6 +354,9 @@ header h1 {
     border-right: 20px solid #FFF;
     display: block;
     content: " ";
+    @media(min-width: 1600px) {
+      left: 90.25%;
+    }
   }
   .project-wrapper-right {
     margin-left: 1px;
@@ -366,6 +373,10 @@ header h1 {
     border-left: 20px solid #FFF;
     display: block;
     content: " ";
+    @media(min-width: 1600px) {
+      left: 4.42%;
+      top: -9px;
+    }
   }
   .project-wrapper-right::after {
     position: absolute;
@@ -376,6 +387,9 @@ header h1 {
     border-left: 20px solid #FFF;
     display: block;
     content: " ";
+    @media(min-width: 1600px) {
+      left: 4.42%;
+    }
   }
   .cd-timeline-content .cd-read-more {
     float: left;
@@ -613,7 +627,7 @@ header h1 {
 
   .project-wrapper-right-wrap {
     float: right !important;
-    @media (max-width:769px) {
+    @media (max-width:1169px) {
       float: left !important;
     }
   }
