--- a/wp-content/themes/srijanalaya/less/custom.less
+++ b/wp-content/themes/srijanalaya/less/custom.less
@@ -1125,3 +1125,32 @@ a:hover {
         font-size: 12px;
     }
 }
+#filter_div ul {
+        display: block;
+    
+}
+#tag_filter_div {
+    height: auto;
+    padding:5px 5px;
+    display: block;
+    width: 100%;
+    border:4px solid #aaaaaa;
+    margin-bottom: 5px;
+    ul > li {
+        float: left;
+        margin-left: 30px;
+        border:1px solid @light-gray;
+        border-radius: 20px;
+        font-size: 13px;
+        width:auto;
+        padding: 2px 10px;
+        color: #E91F4A;
+        //font-family: 'bree serif';
+        font-weight: bold;
+        list-style-type: none;
+        text-transform: uppercase;
+        text-align: center;
+        cursor: pointer;
+     
+    }
+}
