--- a/wp-content/themes/srijanalaya/less/admin.less
+++ b/wp-content/themes/srijanalaya/less/admin.less
@@ -28,6 +28,7 @@ body {
     -webkit-font-smoothing: antialiased;
     line-height: 22px;//18
     letter-spacing: 1.5px;
+    background: #FFF;
     @media (max-width: 991px) {
         font-size: 13px;
         line-height: 18px;
@@ -66,6 +67,7 @@ h2 {
 p {
 
     font-size: 12px;
+    color: #777777 !important;
     font-family:'Helvetica';
     @media (min-width :700px) and (max-width: 1199px) ,(max-width:700px){
 
@@ -73,6 +75,33 @@ p {
     }
 }
 
+input, select {
+    border-radius: 0;
+    color: #777777;
+}
+.wp-core-ui .button-secondary:focus, .wp-core-ui .button-secondary:hover, .wp-core-ui .button.focus, .wp-core-ui .button.hover, .wp-core-ui .button:focus, .wp-core-ui .button:hover {
+   border-radius: 0;
+   border: 1px solid #E8234B;
+   color: #777777;
+   background-color: rgba(232, 35, 75, 0.77);
+}
+
 .wp-admin #footer-ozh-oam, .wp-admin #wpcf-marketing, #dashboard_right_now,  #dashboard_activity, #dashboard_quick_press, .wp-admin #footer-upgrade, #welcome-panel, #screen-meta-links, #screen-meta {
 	display: none !important;
 }
+.alternate, .striped>tbody>:nth-child(odd), ul.striped>:nth-child(odd) {
+    background-color: #FFF;
+}
+
+.wrap .add-new-h2:hover, .wrap .page-title-action:hover {
+    background-color: rgba(232, 35, 75, 0.77);
+}
+.row-title, #wpbody a {
+    color: #E8234B !important;
+}
+
+.wrap .add-new-h2, .wrap .add-new-h2:active, .wrap .page-title-action, .wrap .page-title-action:active, #wpbody h1 a,.wp-core-ui .button, .wp-core-ui .button-secondary {
+    color: #FFF !important; 
+    background-color: #E8234B;
+}
+
