--- a/wp-content/themes/srijanalaya/less/admin.less
+++ b/wp-content/themes/srijanalaya/less/admin.less
@@ -100,7 +100,7 @@ input, select {
     color: #E8234B !important;
 }
 
-.wrap .add-new-h2, .wrap .add-new-h2:active, .wrap .page-title-action, .wrap .page-title-action:active, #wpbody h1 a,.wp-core-ui .button, .wp-core-ui .button-secondary {
+.wrap .add-new-h2, .wrap .add-new-h2:active, .wrap .page-title-action, .wrap .page-title-action:active, #wpbody h1 a,.wp-core-ui .button, .wp-core-ui .button-secondary,#post-body a.button {
     color: #FFF !important; 
     background-color: #E8234B;
 }
