Menu item name fixes

--- a/wp-content/themes/srijanalaya/less/admin.less
+++ b/wp-content/themes/srijanalaya/less/admin.less
@@ -86,7 +86,7 @@ input, select {
    background-color: rgba(232, 35, 75, 0.77);
 }
 
-.wp-admin #footer-ozh-oam, .wp-admin #wpcf-marketing, #dashboard_right_now,  #dashboard_activity, #dashboard_quick_press, .wp-admin #footer-upgrade, #welcome-panel, #screen-meta-links, #screen-meta {
+.wp-admin #footer-ozh-oam, .wp-admin #wpcf-marketing, #dashboard_right_now,  #dashboard_activity, #dashboard_quick_press, .wp-admin #footer-upgrade, #welcome-panel, #screen-meta-links, #screen-meta, .view-switch {
 	display: none !important;
 }
 .alternate, .striped>tbody>:nth-child(odd), ul.striped>:nth-child(odd) {
@@ -97,10 +97,10 @@ input, select {
     background-color: rgba(232, 35, 75, 0.77);
 }
 .row-title, #wpbody a {
-    color: #E8234B !important;
+    color: #E8234B;
 }
 
-.wrap .add-new-h2, .wrap .add-new-h2:active, .wrap .page-title-action, .wrap .page-title-action:active, #wpbody h1 a,.wp-core-ui .button, .wp-core-ui .button-secondary,#post-body a.button, .icon-types-logo, span.wp-media-buttons-icon:before {
+#wpbody .wrap .add-new-h2, #wp-body .button-secondary, .wrap .add-new-h2:active, .wrap .page-title-action, .wrap .page-title-action:active, #wpbody h1 a,.wp-core-ui .button, #wp-body .wp-core-ui .button-secondary,#post-body a.button, .icon-types-logo, span.wp-media-buttons-icon:before,.wp-core-ui .button, .wp-core-ui .button-secondary {
     color: #FFF !important; 
     background-color: #E8234B;
 }
