--- a/wp-content/themes/srijanalaya/less/custom.less
+++ b/wp-content/themes/srijanalaya/less/custom.less
@@ -89,7 +89,7 @@ h2 {
 p, .footer-bar {
 
     font-size: 20px;
-    font-family:'Helvetica';
+    font-family: 'allerregular';
     @media (min-width :700px) and (max-width: 1199px) ,(max-width:700px){
 
         font-size:15px;
@@ -205,8 +205,8 @@ a:hover {
 .dropdown-menu {
     background-color: #8cc344 !important;
     a {
-       color: #FFF !important;
-   }  
+     color: #FFF !important;
+ }  
 }
 #myNavbar {
     background-color: @backgroundGrey;
@@ -322,11 +322,11 @@ a:hover {
     }
 }
 #slider-1 {
-   position: relative;
-   top: 100px;
-   width: 50%;
-   margin-left: 100px;
-   @media(max-width:769px) {
+ position: relative;
+ top: 100px;
+ width: 50%;
+ margin-left: 100px;
+ @media(max-width:769px) {
     top:30px;
     width:70%;
     position: absolute;
@@ -339,9 +339,9 @@ a:hover {
 }
 }
 #slider-1 .item h1 {
- color:#E9204A;
+   color:#E9204A;
 
- font-family: 'bree serif';
+   font-family: 'bree serif';
 
 }
 
@@ -391,7 +391,7 @@ a:hover {
 
 
 #section2 ,#section3 {
-   color:#898B8E;
+ color:#898B8E;
 }
 
 .section .btn {
@@ -428,33 +428,33 @@ a:hover {
 
 }
 #twothird,#fourthird {
-   background-color:#E5E5E5;
-   padding-left:5%;
-   padding-top:5%;
+ background-color:#E5E5E5;
+ padding-left:5%;
+ padding-top:5%;
 }
 .post-navigate {
-   width:100%;
-   left: 0;
-   text-align:center;
-   display:block;
-   position:absolute;
-   bottom:0;
-   .btn {
-     display:inline-block;
-     padding-top:25px;
-     font-size:20px;
-     color:#FFF;
-     background-color:#D1D2D1;
-     height:70px;
-     width:150px;
-     border-radius: 150px 150px 0 0;
-     -moz-border-radius: 150px 150px 0 0;
-     -webkit-border-radius: 150px 150px 0 0;
-     @media (min-width :700px) and (max-width: 1199px) ,(max-width:700px){
-        height:50px;
-        width:100px;
-        font-size:10px;
-    }
+ width:100%;
+ left: 0;
+ text-align:center;
+ display:block;
+ position:absolute;
+ bottom:0;
+ .btn {
+   display:inline-block;
+   padding-top:25px;
+   font-size:20px;
+   color:#FFF;
+   background-color:#D1D2D1;
+   height:70px;
+   width:150px;
+   border-radius: 150px 150px 0 0;
+   -moz-border-radius: 150px 150px 0 0;
+   -webkit-border-radius: 150px 150px 0 0;
+   @media (min-width :700px) and (max-width: 1199px) ,(max-width:700px){
+    height:50px;
+    width:100px;
+    font-size:10px;
+}
 }
 }
 .pink {
@@ -527,24 +527,24 @@ a:hover {
     }
     &:hover{
         .outimg {
-           -webkit-transform:scale(1.1);
-           -moz-transform:scale(1.1);
-           transform:scale(1.1);
-           -o-transform:scale(1.1);
-       }
-   }
+         -webkit-transform:scale(1.1);
+         -moz-transform:scale(1.1);
+         transform:scale(1.1);
+         -o-transform:scale(1.1);
+     }
+ }
 }
 .quarter, .quarter2, .odd, .even {
     .semicircle {
-     -webkit-transform:scale(1);
-     -moz-transform:scale(1);
-     -o-transform:scale(1);
-     transform:scale(1);
-     -webkit-transition-duration: 1s;
-     -moz-transition-duration: 1s;
-     -o-transition-duration: 1s;
- }
- &:hover{
+       -webkit-transform:scale(1);
+       -moz-transform:scale(1);
+       -o-transform:scale(1);
+       transform:scale(1);
+       -webkit-transition-duration: 1s;
+       -moz-transition-duration: 1s;
+       -o-transition-duration: 1s;
+   }
+   &:hover{
     color: #353535;
     .semicircle {
         background-color: #e91f4a;
@@ -555,8 +555,8 @@ a:hover {
         -o-transform:scale(1.1);
     }
     .key {
-       color:#e9214b;
-   }
+     color:#e9214b;
+ }
 }
 }
 .quarter, .quarter2, .quarter3, .quarter4 {
@@ -585,9 +585,9 @@ a:hover {
     }
 }
 .quarter3, .quarter4 {
- .key {
-   color:#e9214b;
-}
+   .key {
+     color:#e9214b;
+ }
 }
 .section-container {
     padding: 0;
@@ -773,16 +773,16 @@ a:hover {
         width: 20%;
         min-width: 180px;
         @media(max-width:769px) {
-         display: block;
-         margin: 0;
-         padding: 0;
-         top: 0;
-         position: relative;
-         min-width: none;
-         width: auto;
-     }
- }
- .social-block {
+           display: block;
+           margin: 0;
+           padding: 0;
+           top: 0;
+           position: relative;
+           min-width: none;
+           width: auto;
+       }
+   }
+   .social-block {
     min-width: 233px;
     @media(max-width:769px) {
         width: 25%;
@@ -795,13 +795,13 @@ a:hover {
         text-align: center;
     }
     p {
-     font-size: 14px;
-     width: 98%;
-     background-color: #4c4b4c;
-     margin: 0;
-     padding: 16px 17px;
-     margin-bottom: 2px;
- }
+       font-size: 14px;
+       width: 98%;
+       background-color: #4c4b4c;
+       margin: 0;
+       padding: 16px 17px;
+       margin-bottom: 2px;
+   }
 }
 }
 
@@ -1030,11 +1030,11 @@ a:hover {
             box-sizing: border;
             border-bottom: 1px solid #575656; 
             @media (max-width: 769px) {
-               box-sizing: border;
-               border-bottom: 1px solid #575656; 
-           }
-       }
-   }
+             box-sizing: border;
+             border-bottom: 1px solid #575656; 
+         }
+     }
+ }
 }
 .home .footer {
     margin-top: 0;
@@ -1260,22 +1260,31 @@ a:hover {
     height: 200px;
     width: 280px;
 }
-
-ul.share-buttons{
-  list-style: none;
-  padding: 0;
-  li {
-    display: inline;
-    a{
-        color: #b4b4b5;
-        &:hover {
-            color: #E8234B;
-        }
-        i{
-            font-weight: 800;
+.social-buttons {
+    color: #8cc344;
+    font-family: 'allerregular';
+    font-size: 16px;
+    span {
+        margin-right: 15px; 
+    }
+    ul.share-buttons{
+      list-style: none;
+      padding: 0;
+      display: inline;
+      border-left: 1px solid #f2f2f2;
+      padding-left: 10px;
+      li {
+        display: inline;
+        margin-right: 15px;
+        a{
+            color: #b4b4b5;
+            &:hover {
+                color: #E8234B;
+            }
+            i{
+                font-weight: 800;
+            }
         }
     }
-  }
 }
-
-
+}
