--- a/wp-content/themes/srijanalaya/less/custom.less
+++ b/wp-content/themes/srijanalaya/less/custom.less
@@ -629,7 +629,7 @@ a:hover {
     font-size: 14px;
     margin-top: 10px;
     img {
-        vertical-align: text-top;
+        vertical-align: text-bottom;
         margin-right: 5px;
         margin-top: 1px;
     }
