--- a/wp-content/themes/srijanalaya/less/custom.less
+++ b/wp-content/themes/srijanalaya/less/custom.less
@@ -1088,6 +1088,7 @@ a:hover {
         margin-right: 50px;
         color: #807f7f;
         padding: 7px 0;
+        min-width: 120px;
     }
     .subpageMenu, a {
         width: 200px;
@@ -1287,4 +1288,67 @@ a:hover {
         }
     }
 }
+}
+.side-wrap {
+    border-bottom: 1px solid #f2f2f2;
+    padding-bottom: 35px;
+    margin-bottom: 35px;
+    &.last {
+        border-bottom: none;
+    }
+    a {
+
+        color: #888888;
+        &:hover {
+            color: #e91f4a;
+        }
+    }
+}
+.side-transparent-block {
+ height: 150px;
+ width: 280px;
+ background-color: rgba(0, 0, 0, 0.8);
+ position: absolute;
+ display: flex;
+ justify-content: center;
+ align-items: center;
+ text-align: center;
+ top: 0;
+ left: 0;
+ z-index: 9;
+ display: none;
+ .close-info {
+    position: absolute;
+    right: 10px;
+    color: #FFF;
+    cursor: pointer;
+}
+}
+form .btn {
+    background: #E91F4A;
+    border-radius: 0;
+    font-weight: normal;
+    font-family: 'allerregular';
+    color: #ffffff;
+}
+@media(max-width:991px) {
+    .mid-nav {
+        height: 30px;
+        img {
+            height: 30px;
+        }
+    }
+}
+@media(max-width:769px) {
+    .project-inner-page-content {
+        text-align: center;
+        padding-left: 30px;
+        padding-right: 30px;
+    }
+    .mid-nav {
+        height: 28px;
+        img {
+            height: 28px;
+        }
+    }
 }
