--- a/wp-content/themes/srijanalaya/less/custom.less
+++ b/wp-content/themes/srijanalaya/less/custom.less
@@ -205,8 +205,8 @@ a:hover {
 .dropdown-menu {
     background-color: #8cc344 !important;
     a {
-     color: #FFF !important;
- }  
+       color: #FFF !important;
+   }  
 }
 #myNavbar {
     background-color: @backgroundGrey;
@@ -322,11 +322,11 @@ a:hover {
     }
 }
 #slider-1 {
- position: relative;
- top: 100px;
- width: 50%;
- margin-left: 100px;
- @media(max-width:769px) {
+   position: relative;
+   top: 100px;
+   width: 50%;
+   margin-left: 100px;
+   @media(max-width:769px) {
     top:30px;
     width:70%;
     position: absolute;
@@ -339,9 +339,9 @@ a:hover {
 }
 }
 #slider-1 .item h1 {
-   color:#E9204A;
+ color:#E9204A;
 
-   font-family: 'bree serif';
+ font-family: 'bree serif';
 
 }
 
@@ -391,7 +391,7 @@ a:hover {
 
 
 #section2 ,#section3 {
- color:#898B8E;
+   color:#898B8E;
 }
 
 .section .btn {
@@ -428,33 +428,33 @@ a:hover {
 
 }
 #twothird,#fourthird {
- background-color:#E5E5E5;
- padding-left:5%;
- padding-top:5%;
+   background-color:#E5E5E5;
+   padding-left:5%;
+   padding-top:5%;
 }
 .post-navigate {
- width:100%;
- left: 0;
- text-align:center;
- display:block;
- position:absolute;
- bottom:0;
- .btn {
-   display:inline-block;
-   padding-top:25px;
-   font-size:20px;
-   color:#FFF;
-   background-color:#D1D2D1;
-   height:70px;
-   width:150px;
-   border-radius: 150px 150px 0 0;
-   -moz-border-radius: 150px 150px 0 0;
-   -webkit-border-radius: 150px 150px 0 0;
-   @media (min-width :700px) and (max-width: 1199px) ,(max-width:700px){
-    height:50px;
-    width:100px;
-    font-size:10px;
-}
+   width:100%;
+   left: 0;
+   text-align:center;
+   display:block;
+   position:absolute;
+   bottom:0;
+   .btn {
+     display:inline-block;
+     padding-top:25px;
+     font-size:20px;
+     color:#FFF;
+     background-color:#D1D2D1;
+     height:70px;
+     width:150px;
+     border-radius: 150px 150px 0 0;
+     -moz-border-radius: 150px 150px 0 0;
+     -webkit-border-radius: 150px 150px 0 0;
+     @media (min-width :700px) and (max-width: 1199px) ,(max-width:700px){
+        height:50px;
+        width:100px;
+        font-size:10px;
+    }
 }
 }
 .pink {
@@ -527,24 +527,24 @@ a:hover {
     }
     &:hover{
         .outimg {
-         -webkit-transform:scale(1.1);
-         -moz-transform:scale(1.1);
-         transform:scale(1.1);
-         -o-transform:scale(1.1);
-     }
- }
+           -webkit-transform:scale(1.1);
+           -moz-transform:scale(1.1);
+           transform:scale(1.1);
+           -o-transform:scale(1.1);
+       }
+   }
 }
 .quarter, .quarter2, .odd, .even {
     .semicircle {
-       -webkit-transform:scale(1);
-       -moz-transform:scale(1);
-       -o-transform:scale(1);
-       transform:scale(1);
-       -webkit-transition-duration: 1s;
-       -moz-transition-duration: 1s;
-       -o-transition-duration: 1s;
-   }
-   &:hover{
+     -webkit-transform:scale(1);
+     -moz-transform:scale(1);
+     -o-transform:scale(1);
+     transform:scale(1);
+     -webkit-transition-duration: 1s;
+     -moz-transition-duration: 1s;
+     -o-transition-duration: 1s;
+ }
+ &:hover{
     color: #353535;
     .semicircle {
         background-color: #e91f4a;
@@ -555,8 +555,8 @@ a:hover {
         -o-transform:scale(1.1);
     }
     .key {
-     color:#e9214b;
- }
+       color:#e9214b;
+   }
 }
 }
 .quarter, .quarter2, .quarter3, .quarter4 {
@@ -585,9 +585,9 @@ a:hover {
     }
 }
 .quarter3, .quarter4 {
-   .key {
-     color:#e9214b;
- }
+ .key {
+   color:#e9214b;
+}
 }
 .section-container {
     padding: 0;
@@ -773,16 +773,16 @@ a:hover {
         width: 20%;
         min-width: 180px;
         @media(max-width:769px) {
-           display: block;
-           margin: 0;
-           padding: 0;
-           top: 0;
-           position: relative;
-           min-width: none;
-           width: auto;
-       }
-   }
-   .social-block {
+         display: block;
+         margin: 0;
+         padding: 0;
+         top: 0;
+         position: relative;
+         min-width: none;
+         width: auto;
+     }
+ }
+ .social-block {
     min-width: 233px;
     @media(max-width:769px) {
         width: 25%;
@@ -795,13 +795,13 @@ a:hover {
         text-align: center;
     }
     p {
-       font-size: 14px;
-       width: 98%;
-       background-color: #4c4b4c;
-       margin: 0;
-       padding: 16px 17px;
-       margin-bottom: 2px;
-   }
+     font-size: 14px;
+     width: 98%;
+     background-color: #4c4b4c;
+     margin: 0;
+     padding: 16px 17px;
+     margin-bottom: 2px;
+ }
 }
 }
 
@@ -1030,11 +1030,11 @@ a:hover {
             box-sizing: border;
             border-bottom: 1px solid #575656; 
             @media (max-width: 769px) {
-             box-sizing: border;
-             border-bottom: 1px solid #575656; 
-         }
-     }
- }
+               box-sizing: border;
+               border-bottom: 1px solid #575656; 
+           }
+       }
+   }
 }
 .home .footer {
     margin-top: 0;
@@ -1089,16 +1089,23 @@ a:hover {
         margin-right: 50px;
         color: #807f7f;
         padding: 7px 0;
-        min-width: 120px;
+        min-width: 140px;
         font-size: 14px;
         font-weight: bold;
+        padding-right: 20px;
+        border-right: 1px solid #e2e2e2;
     }
-    .subpageMenu, a {
-        width: 200px;
-        font-size: 14px;
-        font-weight: 400;
+    .subpageMenu {
+        height: 35px;
+        border-right: 1px solid #e2e2e2;
+        vertical-align:top;
         display: inline-block;
-        color: #807f7f;
+        padding: 0 30px;
+        a {
+            font-weight: 400;
+            font-size: 14px;
+            color: #807f7f;
+        }
     }
 }
 .marquee-left {
@@ -1309,19 +1316,19 @@ a:hover {
     }
 }
 .side-transparent-block {
- height: 150px;
- width: 280px;
- background-color: rgba(0, 0, 0, 0.8);
- position: absolute;
- display: flex;
- justify-content: center;
- align-items: center;
- text-align: center;
- top: 0;
- left: 0;
- z-index: 9;
- display: none;
- .close-info {
+   height: 150px;
+   width: 280px;
+   background-color: rgba(0, 0, 0, 0.8);
+   position: absolute;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   text-align: center;
+   top: 0;
+   left: 0;
+   z-index: 9;
+   display: none;
+   .close-info {
     position: absolute;
     right: 10px;
     color: #FFF;
@@ -1355,10 +1362,10 @@ form .btn {
             font-weight: bold;
             font-size: 12px;
             &:hover {
-               color: #e91f4a;
-           }
-       }
-   }
+             color: #e91f4a;
+         }
+     }
+ }
 }
 .subhead {
     h3 {
