--- a/wp-content/themes/srijanalaya/less/calender.less
+++ b/wp-content/themes/srijanalaya/less/calender.less
@@ -79,10 +79,16 @@ h2 {
             color: #a2a2a2;
             font-size: 32px;
             max-width: 275px;
-            .clearfix;
+            .clearfix{
+                clear: both;
+            }
             width: 100%;
             margin-bottom: 10px;
-
+            .header-day {
+                font-size: 14px;
+                float: left;
+                margin-left: 6px;
+            }
             .clndr-previous-button
             {
                 display: inline;
