--- a/wp-content/themes/srijanalaya/less/calender.less
+++ b/wp-content/themes/srijanalaya/less/calender.less
@@ -88,6 +88,8 @@ h2 {
                 font-size: 14px;
                 float: left;
                 margin-left: 6px;
+                position: relative;
+                top:18px;
             }
             .clndr-previous-button
             {
