Filter div added

--- a/wp-content/themes/srijanalaya/less/custom.less
+++ b/wp-content/themes/srijanalaya/less/custom.less
@@ -206,8 +206,8 @@ a:hover {
 .dropdown-menu {
     background-color: #8cc344 !important;
     a {
-     color: #FFF !important;
- }  
+       color: #FFF !important;
+   }  
 }
 #myNavbar {
     background-color: @backgroundGrey;
@@ -324,11 +324,11 @@ a:hover {
     }
 }
 #slider-1 {
- position: relative;
- top: 100px;
- width: 50%;
- margin-left: 100px;
- @media(max-width:769px) {
+   position: relative;
+   top: 100px;
+   width: 50%;
+   margin-left: 100px;
+   @media(max-width:769px) {
     top:30px;
     width:70%;
     position: absolute;
@@ -341,9 +341,9 @@ a:hover {
 }
 }
 #slider-1 .item h1 {
-   color:#E9204A;
+ color:#E9204A;
 
-   font-family: 'bree serif';
+ font-family: 'bree serif';
 
 }
 
@@ -393,7 +393,7 @@ a:hover {
 
 
 #section2 ,#section3 {
- color:#898B8E;
+   color:#898B8E;
 }
 
 .section .btn {
@@ -430,33 +430,33 @@ a:hover {
 
 }
 #twothird,#fourthird {
- background-color:#E5E5E5;
- padding-left:5%;
- padding-top:5%;
+   background-color:#E5E5E5;
+   padding-left:5%;
+   padding-top:5%;
 }
 .post-navigate {
- width:100%;
- left: 0;
- text-align:center;
- display:block;
- position:absolute;
- bottom:0;
- .btn {
-   display:inline-block;
-   padding-top:25px;
-   font-size:20px;
-   color:#FFF;
-   background-color:#D1D2D1;
-   height:70px;
-   width:150px;
-   border-radius: 150px 150px 0 0;
-   -moz-border-radius: 150px 150px 0 0;
-   -webkit-border-radius: 150px 150px 0 0;
-   @media (min-width :700px) and (max-width: 1199px) ,(max-width:700px){
-    height:50px;
-    width:100px;
-    font-size:10px;
-}
+   width:100%;
+   left: 0;
+   text-align:center;
+   display:block;
+   position:absolute;
+   bottom:0;
+   .btn {
+     display:inline-block;
+     padding-top:25px;
+     font-size:20px;
+     color:#FFF;
+     background-color:#D1D2D1;
+     height:70px;
+     width:150px;
+     border-radius: 150px 150px 0 0;
+     -moz-border-radius: 150px 150px 0 0;
+     -webkit-border-radius: 150px 150px 0 0;
+     @media (min-width :700px) and (max-width: 1199px) ,(max-width:700px){
+        height:50px;
+        width:100px;
+        font-size:10px;
+    }
 }
 }
 .pink {
@@ -529,24 +529,24 @@ a:hover {
     }
     &:hover{
         .outimg {
-         -webkit-transform:scale(1.1);
-         -moz-transform:scale(1.1);
-         transform:scale(1.1);
-         -o-transform:scale(1.1);
-     }
- }
+           -webkit-transform:scale(1.1);
+           -moz-transform:scale(1.1);
+           transform:scale(1.1);
+           -o-transform:scale(1.1);
+       }
+   }
 }
 .quarter, .quarter2, .odd, .even {
     .semicircle {
-       -webkit-transform:scale(1);
-       -moz-transform:scale(1);
-       -o-transform:scale(1);
-       transform:scale(1);
-       -webkit-transition-duration: 1s;
-       -moz-transition-duration: 1s;
-       -o-transition-duration: 1s;
-   }
-   &:hover{
+     -webkit-transform:scale(1);
+     -moz-transform:scale(1);
+     -o-transform:scale(1);
+     transform:scale(1);
+     -webkit-transition-duration: 1s;
+     -moz-transition-duration: 1s;
+     -o-transition-duration: 1s;
+ }
+ &:hover{
     color: #353535;
     .semicircle {
         background-color: #e91f4a;
@@ -557,8 +557,8 @@ a:hover {
         -o-transform:scale(1.1);
     }
     .key {
-     color:#e9214b;
- }
+       color:#e9214b;
+   }
 }
 }
 .quarter, .quarter2, .quarter3, .quarter4 {
@@ -587,9 +587,9 @@ a:hover {
     }
 }
 .quarter3, .quarter4 {
-   .key {
-     color:#e9214b;
- }
+ .key {
+   color:#e9214b;
+}
 }
 .section-container {
     padding: 0;
@@ -775,16 +775,16 @@ a:hover {
         width: 20%;
         min-width: 180px;
         @media(max-width:769px) {
-           display: block;
-           margin: 0;
-           padding: 0;
-           top: 0;
-           position: relative;
-           min-width: none;
-           width: auto;
-       }
-   }
-   .social-block {
+         display: block;
+         margin: 0;
+         padding: 0;
+         top: 0;
+         position: relative;
+         min-width: none;
+         width: auto;
+     }
+ }
+ .social-block {
     min-width: 233px;
     @media(max-width:769px) {
         width: 25%;
@@ -797,13 +797,13 @@ a:hover {
         text-align: center;
     }
     p {
-       font-size: 14px;
-       width: 98%;
-       background-color: #4c4b4c;
-       margin: 0;
-       padding: 16px 17px;
-       margin-bottom: 2px;
-   }
+     font-size: 14px;
+     width: 98%;
+     background-color: #4c4b4c;
+     margin: 0;
+     padding: 16px 17px;
+     margin-bottom: 2px;
+ }
 }
 }
 
@@ -1032,11 +1032,11 @@ a:hover {
             box-sizing: border;
             border-bottom: 1px solid #575656; 
             @media (max-width: 769px) {
-             box-sizing: border;
-             border-bottom: 1px solid #575656; 
-         }
-     }
- }
+               box-sizing: border;
+               border-bottom: 1px solid #575656; 
+           }
+       }
+   }
 }
 .home .footer {
     margin-top: 0;
@@ -1149,9 +1149,25 @@ a:hover {
 #filter_div {
     height:100px;
     background: #F8F8F8;
+    .tag-filter-title {
+        color: #777777;
+        font-family: 'Helvetica Bold';
+        margin-left: 125px;
+        display: block;
+        margin-bottom: 10px;
+    }
     .fetch_tag > li {
         list-style-type: none;
-    }
+        position: relative;
+        left: 110px;
+        a {
+            color: #777777;
+            font-family: 'Helvetica Bold';
+            &:hover {
+               color: #e91f4a;   
+           }
+       }
+   }
 }
 
 #filter_div ul {
@@ -1244,10 +1260,10 @@ a:hover {
 
 }
 .date_filter {
-   display: inline;
-   margin:0px;
+ display: inline;
+ margin:0px;
 
-   .caret {
+ .caret {
     float:right;
     margin-right: 10px;
     margin-top: 10px;
@@ -1337,19 +1353,19 @@ a:hover {
     }
 }
 .side-transparent-block {
- height: 150px;
- width: 280px;
- background-color: rgba(0, 0, 0, 0.8);
- position: absolute;
- display: flex;
- justify-content: center;
- align-items: center;
- text-align: center;
- top: 0;
- left: 0;
- z-index: 9;
- display: none;
- @media (max-width: 769px) {
+   height: 150px;
+   width: 280px;
+   background-color: rgba(0, 0, 0, 0.8);
+   position: absolute;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   text-align: center;
+   top: 0;
+   left: 0;
+   z-index: 9;
+   display: none;
+   @media (max-width: 769px) {
     width: 100%;
 }
 input {
@@ -1389,10 +1405,10 @@ form .btn {
             font-weight: bold;
             font-size: 12px;
             &:hover {
-               color: #e91f4a;
-           }
-       }
-   }
+             color: #e91f4a;
+         }
+     }
+ }
 }
 .subhead {
     h3 {
@@ -1416,26 +1432,26 @@ form .btn {
 
 
 #custom_filters ul.transformSelect {
-   display: inline-block;
-   margin-left:0px;
-   color: #807f7f;
-   font-weight: bold;
-   padding: 0;
-   border: 0px;
-   border-left:1px solid #E8E8E7;
-   height: 35px;
-   border-radius: 0;
-   width: 130px;
-   -moz-appearance: none;
-   -webkit-appearance: none;
-   -webkit-border-radius: 0px;
-   -moz-border-radius: 0px;
-   border-radius: 0px;
-   position: absolute;
-   background: #f2f2f2 url('../images/arrow.png') no-repeat center right;
-   border-right: 10px solid transparent;
+ display: inline-block;
+ margin-left:0px;
+ color: #807f7f;
+ font-weight: bold;
+ padding: 0;
+ border: 0px;
+ border-left:1px solid #E8E8E7;
+ height: 35px;
+ border-radius: 0;
+ width: 130px;
+ -moz-appearance: none;
+ -webkit-appearance: none;
+ -webkit-border-radius: 0px;
+ -moz-border-radius: 0px;
+ border-radius: 0px;
+ position: absolute;
+ background: #f2f2f2 url('../images/arrow.png') no-repeat center right;
+ border-right: 10px solid transparent;
 
-   &:hover {
+ &:hover {
     span {
         color: #FFF;
     }
