--- a/wp-content/themes/srijanalaya/less/custom.less
+++ b/wp-content/themes/srijanalaya/less/custom.less
@@ -1437,13 +1437,13 @@ form .btn {
 .subhead {
     h3 {
         color: #807f7f;
-        font-size: 14px !important;
+        font-size: 16px !important;
         font-weight: bold;
         font-family: 'bree serif';
     }
     color: #807f7f;
-    font-size: 12px;
-    font-family: 'Helvetica';
+    font-size: 14px;
+    font-family: 'Helvetica Bold';
     font-weight: 500;
 }
 .info-wrap {
