--- a/wp-content/themes/srijanalaya/less/custom.less
+++ b/wp-content/themes/srijanalaya/less/custom.less
@@ -1066,7 +1066,7 @@ a:hover {
         color: #807f7f;
         font-size: 12px;
     }
-    img {
+    .text-content img {
         display: block;
         width: 100%;
         height: auto;
