--- a/wp-content/themes/srijanalaya/less/custom.less
+++ b/wp-content/themes/srijanalaya/less/custom.less
@@ -1076,6 +1076,7 @@ a:hover {
     width: 100%;
     overflow: hidden;
     height: 35px;
+    font-family: 'Helvetica';
     background-color: #f2f2f2;
     -webkit-box-shadow: 0px 6px 5px 0px rgba(221, 221, 221, 0.75);
     -moz-box-shadow:    0px 6px 5px 0px rgba(221, 221, 221, 0.75);
@@ -1089,6 +1090,7 @@ a:hover {
     .mid-nav-inner { 
         overflow: hidden;
         height: 35px;
+        padding-left: 20px;
         ul {
             height: 100%;
             li {
@@ -1116,9 +1118,14 @@ a:hover {
         display: inline-block;
         padding: 0 30px;
         a {
-            font-weight: 400;
             font-size: 14px;
             color: #807f7f;
+        }
+        &:hover {
+            background-color: #e91f4a;
+            a {
+                color: #FFF;
+            }
         }
     }
 }
